--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,7 @@
     --popover-foreground: 222.2 84% 4.9%;
  
     --card: 0 0% 95%;
+    --card-alt: 0 0% 97%;
     --card-foreground: 222.2 84% 4.9%;
  
     --border: 214.3 31.8% 91.4%;
@@ -47,6 +48,7 @@
     --popover-foreground: 210 40% 98%;
  
     --card: 215 28% 17%;
+    --card-alt:  215 28% 10%;
     --card-foreground: 210 40% 98%;
  
     --border: 217.2 32.6% 17.5%;
