--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
  
 @layer base {
+
   :root {
+    
     --background: 0 0% 97%;
     --foreground: 222.2 84% 4.9%;
  
@@ -68,6 +70,42 @@
  
     --ring: hsl(212.7,26.8%,83.9);
   }
+
+  @media print {
+    :root {
+      --background: 0 0% 100%;
+      --foreground: 222.2 84% 4.9%;
+   
+      --muted: 210 40% 96.1%;
+      --muted-foreground: 215.4 16.3% 36.9%;
+   
+      --popover: 0 0% 100%;
+      --popover-foreground: 222.2 84% 4.9%;
+   
+      --card: 0 0% 100%;
+      --card-alt: 0 0% 95%;
+      --card-foreground: 222.2 84% 4.9%;
+   
+      --border: 214.3 31.8% 91.4%;
+      --input: 214.3 31.8% 91.4%;
+   
+      --primary: 222.2 47.4% 11.2%;
+      --primary-foreground: 210 40% 98%;
+   
+      --secondary: 210 40% 96.1%;
+      --secondary-foreground: 222.2 47.4% 11.2%;
+   
+      --accent: 199 94% 94%;
+      --accent-foreground: 199 98% 28%;
+   
+      --destructive: 0 72.2% 50.6%;
+      --destructive-foreground: 210 40% 98%;
+   
+      --ring: 222.2 84% 4.9%;
+   
+      --radius: 0.5rem;
+    }
+  }
 }
  
 @layer base {
@@ -76,6 +114,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    body{
+      -webkit-print-color-adjust:exact !important;
+      print-color-adjust:exact !important;
+    }
   }
 }
 
@@ -85,4 +127,9 @@
     transform-origin: 50% 50%;
   }
   
-  
+  @media print {
+    body {
+      -webkit-print-color-adjust:exact !important;
+      print-color-adjust:exact !important;
+    }
+  }
